--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,9 @@
 services:
   web:
-    build: .
+    build:
+      context: .
+      args:
+        API_BASE_URL: ${API_BASE_URL:-http://127.0.0.1:8000}
     image: moodleng:latest
     ports:
       - "${HOST_PORT:-8080}:80"
